hotfix: Fix double scroll bar problem

--- a/styles/pages/Index.module.scss
+++ b/styles/pages/Index.module.scss
@@ -246,7 +246,7 @@
     .tracks {
       flex-direction: column;
       align-items: center;
-      overflow: scroll;
+      overflow: auto;
       display: flex;
       margin: 0 auto;
       margin-top: -200px;
